--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body{
     text-decoration: none;
@@ -9,17 +10,19 @@ body{
 .navigation{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    background-color: grey;
+    align-items: baseline;
+    background-color: white;
     width: 100%;
-    height: 5rem;
+    height: 4rem;
+    padding: 1.5rem 0;
+
 }
 .navigation-left{
-    margin: 0 9rem;
+    margin: 0 7rem;
 }
 .navigation-right{
-    margin: 0 4rem;
-    padding: 3rem;
+    /* margin-top: .8rem; */
+    margin-right: 5.5rem;
 }
 .navigation h3{
     color: #335576;
@@ -31,15 +34,21 @@ body{
     display: inline-block;
     list-style-type: none;
 }
+.navigation-right li:hover{
+    text-decoration: none;
+    color: #ce6b57;
+}
 .navigation-unordered-list li{
     display: inline-block;
-    font-size: 1rem;
-    color: black;
-    padding: 0 0.8rem;
+    font-size: .9rem;
+    font-weight: 200;
+    color: #181717;
+    margin: 0 0.8rem;
 }
 
 .navigation-unordered-list__main{
-    border-bottom: rgb(206, 107, 87) .2rem solid;
-}
+    border-bottom: #ce6b57 .2rem solid;
+    padding-bottom: .5rem;
 
+}
 /* Navigation Bar ends here */
