--- a/css/global.css
+++ b/css/global.css
@@ -3,19 +3,16 @@
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-body{
-    text-decoration: none;
-}
-/* Navigation Bar starts here */
+/* Navigation Bar Starts here */
 .navigation{
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    background-color: white;
+    background-color: #FFFFFF;
     width: 100%;
-    height: 4rem;
+    height: 1rem;
     padding: 1.5rem 0;
-
+    position: fixed;
 }
 .navigation-left{
     margin: 0 7rem;
@@ -36,7 +33,7 @@ body{
 }
 .navigation-right li:hover{
     text-decoration: none;
-    color: #ce6b57;
+    color: #DB7A4E;
 }
 .navigation-unordered-list li{
     display: inline-block;
@@ -47,8 +44,57 @@ body{
 }
 
 .navigation-unordered-list__main{
-    border-bottom: #ce6b57 .2rem solid;
+    border-bottom: #DB7A4E .2rem solid;
     padding-bottom: .5rem;
 
 }
-/* Navigation Bar ends here */
+/* Navigation Bar Ends here */
+
+/* main */
+main{
+    height: 50rem;
+    background-color: red;
+}
+/* main ends */
+/* Footer Starts here */
+.footer{
+    background-color: #FEFAF5;
+    height: 12rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+.footer-containers{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 2rem;
+}
+.footer-containers-store__info{
+    text-decoration: none;
+    color: #335576;
+    font-size: smaller;
+}
+.footer-containers__headings{
+    color: #335576;
+    font-size: larger;
+    font-weight: 600;
+    margin: 1rem 0;
+}
+.footer-containers__info{
+    color: #DB7A4E;
+    font-size:x-small;
+    font-weight: 100;
+    padding: 0.8rem 0;
+}
+
+.footer-social__container-icons img{
+    height: 1.5rem;
+    padding-top: 1.7rem;
+    margin-right: 1.6rem;
+}
+.footer-hours__container div{
+    display: inline-block;
+    margin-right: 2.5rem;
+}
+/* Footer Ends here */
