--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-/* main{
-    background-color: grey;
-} */
 /* Hero Section Starts Here */
 .main-hero-section{
     background-color: #FEFAF5;
@@ -9,14 +6,9 @@
     justify-content: space-evenly;
     align-items: center;
 }
-.main-hero-section img{
-    height: 22rem;
-    margin-top: 2rem;
-}
 .main-hero-section__left{
     width: 50%;
 }
-
 .main-hero-section__heading{
     color: #335576;
     font-size: 2rem;
@@ -41,4 +33,53 @@
     background-color: #DB7A4E;
     color: white;
     opacity: 0.8;
+}
+.main-hero-section img{
+    height: 22rem;
+    margin-top: 2rem;
+}
 /* Hero Section Ends Here */
+/* Recommendations Section Starts Here */
+.main-recomendations h1{
+    color: #335576;
+    font-size: 1.4rem;
+    margin: 3rem 4.4rem;
+}
+.main-recomendations-section{
+    color: #335576;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 3rem 12rem;
+}
+.main-recomendations-section__cards{
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 4px rgb(0, 0, 0);
+    border-radius: 5px;
+    margin: 1.2rem;
+    overflow: hidden;
+    width: 15.7rem;
+}
+.main-recomendations-section__cards:hover{
+    opacity: 20%;
+}
+.main-recomendations__hawaii img{
+    height: 24rem;
+    width: 15.9rem;
+    /* /* box-shadow: 0 .313rem 1.563rem -0.063rem rgba(0, 0, 0, 0.20); */
+    border-radius: 5px; 
+}
+.main-recomendations__iceland img{
+    height: 24rem;
+    width: 16.1rem;
+    /* /* box-shadow: 0 .313rem 1.563rem -0.063rem rgba(0, 0, 0, 0.20); */
+    border-radius: 5px; 
+}
+.main-recomendations__greece img{
+    height: 24rem;
+    width: 16.1rem;
+    /* /* box-shadow: 0 .313rem 1.563rem -0.063rem rgba(0, 0, 0, 0.20); */
+    border-radius: 5px; 
+}
+
+/* Recommendations Section Ends Here */
